# openemr

./: .boltrules  .bowerrc  .clinerules  .coderabbit.yaml  .codespell-dictionary.txt  .codespell-exclude-lines.txt  .codespell-ignore-words.txt  .codespellrc  .composer-require-checker.json  .cursorrules  .dclintrc.yaml  .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.json  .geminirc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .hadolint.yaml  .htaccess  .htaccess.example  .php-cs-fixer.cache  .php_cs  .pr-changed-files  .pre-commit-config.yaml  .replit  .scancode-ignore  .shellcheckrc  .stylelintignore  .stylelintrc.json  .travis.yml  .windsurfrules  AGENT_PLANNING_REPORT.md  AI_INSTRUCTIONS.md  API_ARCHITECTURE.md  API_AUTHENTICATION.md  API_AUTHORIZATION.md  (+180 more)
clinical-copilot/: .env.example  .gitignore  AI_COST_ANALYSIS.md  Dockerfile  README.md  constraints-py39.txt  docker-compose.yml  launch-sidecar.command  pyproject.toml
clinical-copilot/.github-workflows/: ci.yml
clinical-copilot/bff/: __init__.py  main.py  oauth.py  policy.py
clinical-copilot/docs/: SIDECAR_TUTORIAL.md
clinical-copilot/evals/: __init__.py  conftest.py  run_evals.py
clinical-copilot/evals/layer1_pairwise/: test_pairwise_judgments.py
clinical-copilot/evals/layer2_patient_scenarios/: test_patient_scenarios.py
clinical-copilot/evals/layer3_adversarial/: test_adversarial.py
clinical-copilot/evals/results/: 2026-04-30T19-35-55Z.junit.xml
clinical-copilot/fixtures/patients/: gout_case.json  osteoporosis_case.json  penicillin_case.json
clinical-copilot/sidecar/: __init__.py  _compat.py  config.py  main.py
clinical-copilot/sidecar/agent/: __init__.py  aggregator.py  error_diagnostics.py  graph.py  pair_generator.py  pair_judge.py  prompts.py
clinical-copilot/sidecar/api/: __init__.py  chat.py
clinical-copilot/sidecar/audit/: __init__.py  log.py  schema.sql
clinical-copilot/sidecar/observability/: __init__.py  tracing.py
clinical-copilot/sidecar/scripts/: __init__.py  diagnose_openai.py
clinical-copilot/sidecar/snapshot/: __init__.py  fhir_client.py  models.py  reconciler.py  service.py
clinical-copilot/sidecar/verifier/: __init__.py  rule_store.yaml  rules.py  verifier.py
clinical-copilot/tests/: conftest.py  test_audit_chain.py  test_error_diagnostics.py  test_oauth.py  test_reconciler.py  test_verifier.py
clinical-copilot/ui/: chat-demo-tutorial.html  chat-demo.html  chat.html
copilot/: .dockerignore  .env.example  .gitignore  COST.md  Dockerfile  IMPLEMENTATION.md  Makefile  README.md  W1_IMPLEMENTATION.md  W2_ARCHITECTURE.md  W2_EARLY_IMPLEMENTATION.md  W2_IMPLEMENTATION.md  build_slides.py  docker-compose.yml  pyproject.toml  railway.toml
copilot/app/: config.py  main.py
copilot/app/acl/: check.py
copilot/app/agent/: evidence.py  llm.py  loop.py  prewarm.py  prompt.py  schemas.py
copilot/app/fhir/: client.py  oauth.py
copilot/app/graph/: __init__.py  build.py  (+3 more)
copilot/corpus/: guidelines.jsonl
copilot/evals/: README.md  RESULTS.md  baseline.json  conftest.py  runner.py  test_runner.py
copilot/sample-documents/: README.md
copilot/scripts/: bench_latency.py  generate_demo_fixtures.py  generate_mvp_fixtures.py  install-hooks.sh
(+22530 files in other folders)
