[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-copilot"
version = "0.1.0"
description = "Clinical Co-Pilot sidecar for OpenEMR — pairwise comparison engine with verification."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Scott Lydon" }]

dependencies = [
    # Lower bounds are the oldest releases that still ship the APIs we use.
    # The 3.9-safe upper bounds live in constraints-py39.txt; production
    # environments on Python ≥ 3.11 install the latest minor unconstrained.
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
    "PyYAML>=6.0.2",
    "tenacity>=9.0.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
# OpenAI + LangGraph are optional so the eval suite can run with the mock
# provider in CI environments without API keys.
openai = [
    "openai>=1.51.0",
    "tiktoken>=0.8.0",
]
langgraph = [
    "langgraph>=0.2.40",
    "langchain-openai>=0.2.0",
]
postgres = [
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.6",
]
observability = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "prometheus-client>=0.21.0",
]
phi = [
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "respx>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["sidecar*", "bff*"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
