[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "clinical-copilot"
version = "0.1.0"
description = "Clinical Co-Pilot agent for OpenEMR — AgentForge"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "anthropic>=0.40",
  "openai>=1.50",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "langfuse>=2.50,<3",
  "python-dotenv>=1.0",
  "sse-starlette>=2.1",
  "aiosqlite>=0.20",
  "python-multipart>=0.0.9",
  "langgraph>=0.2,<0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.7",
  "reportlab>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["evals"]

[tool.ruff]
line-length = 100
target-version = "py311"
